fix horizontal scroll

--- a/less/main.less
+++ b/less/main.less
@@ -173,7 +173,6 @@ em {
 .box-action {
 	position: absolute;
 	height: 100%;
-	width: 100%;
 
 	@media (max-width: 991px) {
 		position: inherit;
